stretching blocks (fixed notes mentor)

--- a/source/sass/blocks/questionnaire-form.scss
+++ b/source/sass/blocks/questionnaire-form.scss
@@ -222,11 +222,7 @@
 
 .questionnaire-form__cell-radio:not(:disabled):focus + .questionnaire-form__label--radio::before,
 .questionnaire-form__cell-checkbox:not(:disabled):focus + .questionnaire-form__label--checkbox::before {
-  border: 1px solid $input-action;
-  outline:
-    thin dotted,
-    5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
+  border: 1px solid $main-color;
 }
 
 .questionnaire-form__cat-owner {
