--- a/source/sass/blocks/selection-program.scss
+++ b/source/sass/blocks/selection-program.scss
@@ -13,7 +13,7 @@
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image:
       url("../img/index-background-mobile@2x.jpg"),
-      linear-gradient(to bottom, $gradient-color 58%, $white-text 0%);
+      linear-gradient(to bottom, $gradient-color 305px, $white-text 0%);
   }
 }
 
@@ -87,7 +87,7 @@
       linear-gradient(to left, $gradient-color 49%, $white-text 49%);
     background-repeat: no-repeat;
     background-position:
-      calc(49% + 373px) 0,
+      calc(50% + 360px) 0,
       top 0 left 0;
     background-size:
       720px 696px,
